# LLM_summer

./: README.md
arm0710_description/: CMakeLists.txt
arm0710_description/install/: local_setup.sh  setup.sh
arm0710_description/launch/: display.launch.py
arm0710_description/log/: latest_build
arm0710_description/urdf/: arm0710.urdf.xacro
arm0717_description/: CMakeLists.txt  package.xml
arm0717_description/install/: local_setup.sh  setup.sh
arm0717_description/log/: latest_build
arm0717_description/urdf/: arm0717.urdf.xacro  arm0717_description.csv
command_endeffector_cartesian/install/: setup.sh
command_endeffector_cartesian/log/: latest_build
dual_arm_collaboration/: setup.cfg  setup.py
dual_arm_collaboration/config/: dual_arm.srdf.xacro  safety_settings.yaml
dual_arm_collaboration/install/: local_setup.sh  setup.sh
dual_arm_collaboration/install/dual_arm_collaboration/share/dual_arm_collaboration/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
dual_arm_collaboration/install/dual_arm_collaboration/share/dual_arm_collaboration/config/: dual_arm_controllers.yaml  dual_arm_planning_groups.yaml  workspace_limits.yaml
dual_arm_collaboration/install/dual_arm_collaboration/share/dual_arm_collaboration/launch/: dual_arm_system.launch.py
dual_arm_collaboration/install/dual_arm_collaboration/share/dual_arm_collaboration/urdf/: dual_arm_system.urdf.xacro
dual_arm_collaboration/launch/: dual_arm_system.launch (副本).py
dual_arm_collaboration/log/: latest_build
dual_arm_collaboration/rviz/: dual_arm_view.rviz
dual_arm_collaboration/scripts/: dual_arm_coordinator.py  test_dual_arm_collaboration.py
dual_arm_system/: CMakeLists.txt  package.xml
dual_arm_system/install/: local_setup.sh  setup.sh
dual_arm_system/launch/: display.launch.py
dual_arm_system/log/: latest_build
dual_arm_system/meshes/: link_4.STL  (+3 more)
dual_realsense/: package.xml  setup.cfg  setup.py
itri_arm/: CMakeLists.txt
itri_arm/config/: controllers.yaml
itri_arm/include/itri_arm/: itri_arm_hardware.hpp
itri_arm/install/: local_setup.sh  setup.sh
itri_arm/install/itri_arm/include/itri_arm/itri_arm/: itri_arm_hardware.hpp
itri_arm/install/itri_arm/share/ament_index/resource_index/hardware_interface__pluginlib__plugin/: itri_arm
itri_arm/install/itri_arm/share/ament_index/resource_index/package_run_dependencies/: itri_arm
itri_arm/install/itri_arm/share/itri_arm/: itri_arm_hardware.xml  local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
itri_arm/install/itri_arm/share/itri_arm/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_targets-extras.cmake  itri_armConfig.cmake
itri_arm/install/itri_arm/share/itri_arm/urdf/: itri_arm.ros2_control.xacro  itri_arm.urdf.xacro  itri_arm_hardware.xml
itri_arm/launch/: itri_arm_control.launch.py
itri_arm/log/: latest_build
itri_arm/scripts/: test_control.py
itri_arm/src/: itri_arm_hardware.cpp  itri_arm_hardware.cpp.backup
multi_realsense_launch/: package.xml  setup.cfg  setup.py
my_robot_socket_node/: package.xml  setup.cfg  setup.py
robot_interface/: setup.py
robotiq3f_ros2/: setup.cfg  setup.py
simple_vision_feedback/: package.xml  setup.cfg  setup.py
yolo_pf_realsense/: setup.cfg  setup.py
(+110 files in other folders)
